# Exploring_the_World_of_Programming_with_Python

./: .gitignore  README.md  pyproject.toml
11_elevenlabs.io_Generative_Voice_AI/: 1_Generative_Voice_AI.py
13_My_Website/: app.py  pyproject.toml  requirements.txt
13_My_Website/.streamlit/: config.toml
14_How_to_Save_Docker_Data_using_Bind_Mounts_or_Volumes/: Tutorial_Docker_Bind-Mounts_or_Volumes.md
15_Python_MySQL_Docker/: 1_python_com_MySQL.py  2_Encapsulamento_python_com_MySQL.py  Python_MySQL_Docker.md  my_dataframe.csv
16_100DayOfPython/: Day_21_Python_Inner_Functions_and_Decorators.ipynb
18_Ollama/: 1_LangChain_gemma_basic.py  2_LangChain_PromptTemplate_with_Ollama.py  3_LangChain_ChatPromptTemplate_with_Ollama.py  4_Let_AIs_do_the_Jobs_with_CrewAI.ipynb  5_Ollama_Function_Calling_cli_Chat.py  6_test_ollama_api.py  7_Local_RAG_with_Llama3_Ollama.py  ChatOllama_and_tool_1.py  ChatOllama_and_tool_2.py  Installing_and_Running_Ollama.sh  sentiment-analysis-Dashboard.py
19_Time_Series_Forecasting/: Time_Series_Forecasting_With_Prophet_in_Python.ipynb
1_App_with_Tkinter/: 1_App_with_Tkinter.py
20_Recommendation System/: EddyGiusepe_Simple_Recommender_System_with_KNN.ipynb  Recommendation_Systems_with_Surprise.ipynb
21_SQL_com_Pandas/: SQL_com_Pandas.ipynb
22_PDF_and_Images_Content_Extraction_for_LLM/: PDF_and_Images_Content_Extraction_for_LLMs.ipynb  requirements.txt
23_LangGraph/: 1_Quick_start.py  2_Quick_start.py  3_0_Analysis_and_Recommendations.py  3_1_Long_Synthesis.py  3_2_Short_Synthesis.py  4_LangGraph_comparandoPDFs.py  5_LangGraph-Tutorial.ipynb  Dockerfile  main.py
24_crewAI/: 1_crewAI_Tutorial.py  2_Financial_Advisor.py  3_summarizing_with_crewAI.py  4_Creating_AI_agents_with_Crewai_and_using_Ollama.ipynb  5_Building_a_Multi-Agent_System_to_Complex_Tasks.ipynb  6_crewAI_herda_Class-Agent.py  7_Predictive_Maintenance_with_crewAI.py  Eddy-blog-Peru.md
24_crewAI/agencia_noticias/: README.md  pyproject.toml
24_crewAI/agencia_noticias/src/agencia_noticias/: convert_to_audio.py  crew.py  crew_old.py  main.py  main_old.py  report_ptbr.md
24_crewAI/agencia_noticias/src/agencia_noticias/config/: tasks.yaml  tasks_old.yaml
25_RAG_for_Web_and_PDF/: RAG_for_Web_and_PDF.py
26_ExtractThinker_and_Spam_Not_Spam/: 1_Label_to_Spam_and_Not-Spam.py
27_Prompt_Engineering/: 1_LLM_prompt_uncertainty_test.ipynb  2_structured_outputs_in_JSON.ipynb  3_structured_outputs_with_OpenAI.ipynb  (+1 more)
(+140 files in other folders)
