[project]
name = "exploring-the-world-of-programming-with-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "devtools>=0.12.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "gradio>=5.21.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-huggingface>=0.1.2",
    "logfire>=3.8.1",
    "nest-asyncio>=1.6.0",
    "pydantic-ai>=0.0.39",
    "pydantic-ai-slim[groq,logfire,openai]>=0.0.39",
    "pypdf>=5.3.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sentence-transformers>=3.4.1",
    "tavily-python>=0.5.1",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
