[tool.poetry]
name = "agencia_noticias"
version = "0.1.0"
description = "agencia_noticias using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.32.2" }

[tool.poetry.scripts]
agencia_noticias = "agencia_noticias.main:run"
train = "agencia_noticias.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
